[gd_scene load_steps=23 format=3 uid="uid://st1v0fmsx3mc"]

[ext_resource type="TileSet" uid="uid://bts106mttgyup" path="res://Assets/mainSets.tres" id="1_e00lh"]
[ext_resource type="PackedScene" uid="uid://dbf8a8cj7e8rq" path="res://utility/invisibleWall/invisibleWalls.tscn" id="1_gos30"]
[ext_resource type="Script" path="res://scenes/level2/level_2.gd" id="1_obkcj"]
[ext_resource type="PackedScene" uid="uid://m78i1ve0lx6k" path="res://scenes/level2/pig.tscn" id="2_8bon0"]
[ext_resource type="PackedScene" uid="uid://c6omje6eu138a" path="res://utility/transition/scene_trasition.tscn" id="2_pxiyr"]
[ext_resource type="PackedScene" uid="uid://x83jnlhefpgp" path="res://controlsUI/dirControl/dir_control.tscn" id="3_n61fe"]
[ext_resource type="PackedScene" uid="uid://dp7x30e1k7urr" path="res://scenes/level2/npc.tscn" id="3_p0pyx"]
[ext_resource type="PackedScene" uid="uid://085xg8eitu0h" path="res://mainCharacter/main_character.tscn" id="4_lwv3j"]
[ext_resource type="Texture2D" uid="uid://1asfxuvl67nx" path="res://img/pig.png" id="7_vcibd"]
[ext_resource type="LabelSettings" uid="uid://badnjvfft7av1" path="res://scenes/level2/level_2.tres" id="9_ywr7q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c0smx"]
atlas = ExtResource("7_vcibd")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbaea"]
atlas = ExtResource("7_vcibd")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3bfs"]
atlas = ExtResource("7_vcibd")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_biifd"]
atlas = ExtResource("7_vcibd")
region = Rect2(192, 256, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_wqn4n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0smx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbaea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3bfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_biifd")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_7euw4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label2:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3xv2e"]
resource_name = "pig_caught"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label2:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_a8246"]
resource_name = "pig_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pig:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(500, 180), Vector2(200, 180)]
}

[sub_resource type="Animation" id="Animation_rj5j7"]
resource_name = "pig_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pig:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-50, 180), Vector2(200, 180)]
}

[sub_resource type="Animation" id="Animation_p071t"]
resource_name = "start"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8x6bn"]
_data = {
"RESET": SubResource("Animation_7euw4"),
"pig_caught": SubResource("Animation_3xv2e"),
"pig_left": SubResource("Animation_a8246"),
"pig_right": SubResource("Animation_rj5j7"),
"start": SubResource("Animation_p071t")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7j5ky"]
size = Vector2(13, 14.5)

[node name="Level2" type="Node2D"]
script = ExtResource("1_obkcj")

[node name="SceneTrasition" parent="." instance=ExtResource("2_pxiyr")]

[node name="DirControl" parent="SceneTrasition" instance=ExtResource("3_n61fe")]
offset_left = 6.0
offset_top = 72.0
offset_right = -222.0
offset_bottom = 1.0

[node name="TopWall" parent="." instance=ExtResource("1_gos30")]
position = Vector2(200, -15)
scale = Vector2(30, 1)

[node name="BottomWall" parent="." instance=ExtResource("1_gos30")]
position = Vector2(222, 319)
scale = Vector2(30, 1)

[node name="RightWall" parent="." instance=ExtResource("1_gos30")]
position = Vector2(458, 128)
rotation = 1.57079
scale = Vector2(20, 1)

[node name="LeftWall" parent="." instance=ExtResource("1_gos30")]
position = Vector2(-17, 129)
rotation = 1.57079
scale = Vector2(20, 1)

[node name="TileMap" type="TileMap" parent="."]
z_index = 1
y_sort_enabled = true
tile_set = ExtResource("1_e00lh")
format = 2
layer_0/tile_data = PackedInt32Array(0, 4, 0, 65536, 4, 0, 131072, 4, 0, 196608, 4, 0, 131073, 65536, 1, 65537, 65536, 1, 1, 65536, 1, 2, 131072, 1, 65538, 131072, 1, 131074, 131072, 1, 196610, 131072, 1, 196609, 65536, 1, 262145, 65536, 1, 262144, 4, 0, 3, 131072, 1, 17, 4, 0, 16, 4, 0, 15, 4, 0, 14, 4, 0, 13, 4, 0, 12, 4, 0, 11, 4, 0, 10, 4, 0, 9, 4, 0, 8, 4, 0, 7, 4, 0, 6, 4, 0, 5, 4, 0, 4, 196608, 1, 65553, 4, 0, 65539, 131072, 1, 131082, 4, 0, 65546, 4, 0, 65545, 4, 0, 65544, 4, 0, 65543, 4, 0, 65542, 4, 0, 65541, 4, 0, 65540, 196608, 1, 131076, 196608, 1, 131075, 131072, 1, 196611, 131072, 1, 262147, 131072, 1, 262146, 131072, 1, 262148, 196608, 1, 196612, 196608, 1, 196613, 4, 0, 131077, 4, 0, 131078, 4, 0, 196614, 4, 0, 262150, 4, 0, 262149, 4, 0, 262151, 4, 0, 196615, 4, 0, 131079, 4, 0, 131080, 4, 0, 196616, 4, 0, 262152, 4, 0, 262153, 4, 0, 196617, 4, 0, 131081, 4, 0, 196618, 4, 0, 262154, 4, 0, 262155, 4, 0, 196619, 4, 0, 131083, 4, 0, 65547, 4, 0, 65548, 4, 0, 131084, 4, 0, 196620, 4, 0, 262156, 4, 0, 262157, 4, 0, 196621, 4, 0, 131085, 4, 0, 65549, 4, 0, 65550, 4, 0, 131086, 65536, 0, 196622, 65536, 1, 262158, 65536, 2, 262159, 131072, 2, 196623, 131072, 1, 131087, 131072, 0, 65551, 4, 0, 65552, 4, 0, 131088, 196608, 0, 196624, 196608, 1, 262160, 196608, 2, 262161, 4, 0, 196625, 4, 0, 131089, 4, 0, 327680, 4, 0, 393216, 4, 0, 458752, 4, 0, 524288, 4, 0, 524289, 65536, 2, 524290, 131072, 2, 524291, 131072, 2, 524292, 327680, 0, 524293, 131072, 1, 524294, 262144, 0, 524295, 327680, 0, 524296, 131072, 1, 524297, 131072, 1, 524298, 131072, 1, 524299, 131072, 1, 524300, 131072, 1, 524301, 131072, 1, 524302, 262144, 1, 524303, 327680, 1, 524304, 131072, 1, 524305, 131072, 1, 458769, 131072, 1, 393233, 131072, 1, 327697, 131072, 0, 393222, 131072, 1, 327686, 131072, 0, 327685, 131072, 0, 327684, 262144, 1, 327683, 131072, 1, 327682, 131072, 1, 327681, 65536, 1, 393217, 65536, 1, 458753, 65536, 1, 458754, 131072, 1, 393218, 524291, 6, 393219, 131072, 1, 458755, 131072, 1, 458756, 131072, 1, 393220, 131072, 1, 393221, 131072, 1, 458757, 131072, 1, 458758, 131072, 1, 458759, 131072, 1, 393223, 131072, 1, 327687, 131072, 0, 327688, 131072, 0, 393224, 131072, 1, 458760, 131072, 1, 458761, 131072, 1, 393225, 131072, 1, 327689, 131072, 0, 327690, 131072, 0, 393226, 131072, 1, 458762, 131072, 1, 458763, 131072, 1, 393227, 131072, 1, 327691, 131072, 0, 327692, 131072, 0, 393228, 131072, 1, 458764, 131072, 1, 458765, 131072, 1, 393229, 131072, 1, 327693, 131072, 0, 327694, 131072, 0, 393230, 131072, 1, 458766, 262144, 0, 458767, 327680, 0, 393231, 131072, 1, 327695, 131072, 0, 327696, 131072, 0, 393232, 131072, 1, 458768, 131072, 1, -65532, 131072, 1, -65533, 131072, 1, -65536, 4, 0, -1, 4, 0, 65535, 4, 0, 131071, 4, 0, 196607, 4, 0, 262143, 4, 0, 327679, 4, 0, 589823, 4, 0, 524287, 4, 0, 458751, 4, 0, 393215, 4, 0, -65534, 4, 0, -65535, 4, 0, 589822, 4, 0, -65531, 4, 0, -65530, 4, 0, -65529, 4, 0, -65528, 4, 0, -65527, 4, 0, -65526, 4, 0, -65525, 4, 0, -65524, 4, 0, -65523, 4, 0, -65522, 4, 0, -65521, 4, 0, -65520, 4, 0, -65519, 4, 0, 524306, 131072, 1, 589824, 4, 0, 589825, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 65536, 1, 589829, 131072, 1, 589830, 262144, 1, 589831, 327680, 1, 589832, 131072, 1, 589833, 131072, 1, 589834, 131072, 1, 589835, 131072, 1, 589836, 131072, 1, 589837, 131072, 1, 589838, 131072, 1, 589839, 131072, 1, 589840, 131072, 1, 589841, 131072, 1, 589842, 131072, 1, 589843, 131072, 1, 589844, 131072, 1, 655372, 131072, 1, 655371, 327680, 0, 655370, 262144, 0, 655369, 131072, 1, 655368, 131072, 1, 655367, 131072, 1, 655366, 131072, 1, 655365, 131072, 1, 655364, 65536, 1, 655363, 4, 0, 655362, 4, 0, 655361, 4, 0, 655360, 4, 0, 655373, 131072, 1, 655374, 131072, 1, 655375, 131072, 1, 655376, 131072, 1, 655377, 131072, 1, 655378, 131072, 1, 655379, 131072, 1, 655380, 131072, 1, 655381, 196608, 1, 720915, 131072, 1, 720914, 131072, 1, 720913, 131072, 1, 720912, 131072, 1, 720911, 131072, 1, 720910, 131072, 1, 720909, 131072, 1, 720908, 131072, 1, 720907, 327680, 1, 720906, 262144, 1, 720905, 131072, 1, 720904, 131072, 1, 720903, 131072, 1, 720902, 131072, 1, 720901, 131072, 1, 720900, 65536, 1, 720899, 4, 0, 720898, 4, 0, 720897, 4, 0, 655359, 4, 0, 720895, 4, 0, 786431, 4, 0, 851967, 4, 0, 917503, 4, 0, 983039, 4, 0, 1048575, 4, 0, 983040, 4, 0, 983041, 4, 0, 983042, 4, 0, 983043, 4, 0, 983044, 65536, 1, 983045, 131072, 1, 983046, 131072, 1, 983047, 131072, 1, 983048, 262144, 1, 983049, 327680, 1, 983050, 131072, 1, 983051, 131072, 1, 983052, 131072, 1, 983053, 131072, 1, 983054, 131072, 1, 983055, 131072, 1, 983056, 131072, 1, 983057, 131072, 1, 983058, 131072, 1, 983059, 131072, 1, 917523, 327680, 1, 851987, 327680, 0, 786451, 131072, 1, 524307, 131072, 1, 458771, 131072, 1, 393235, 131072, 1, 327699, 131072, 0, 262163, 4, 0, 196627, 4, 0, 131091, 4, 0, 65555, 4, 0, 19, 4, 0, -65518, 4, 0, -65517, 4, 0, 917512, 262144, 0, 851976, 131072, 1, 786440, 131072, 1, 786439, 131072, 1, 786438, 131072, 1, 786437, 131072, 1, 786436, 65536, 1, 786435, 4, 0, 786434, 4, 0, 786433, 4, 0, 786432, 4, 0, 720896, 4, 0, 851968, 4, 0, 917504, 4, 0, 917505, 4, 0, 851969, 4, 0, 851970, 4, 0, 917506, 4, 0, 917507, 4, 0, 851971, 4, 0, 851972, 65536, 1, 917508, 65536, 1, 917509, 131072, 1, 851973, 131072, 1, 851974, 131072, 1, 917510, 131072, 1, 917511, 131072, 1, 851975, 131072, 1, 786441, 131072, 1, 851977, 131072, 1, 917513, 327680, 0, 917514, 131072, 1, 851978, 131072, 1, 786442, 131072, 1, 786443, 131072, 1, 851979, 131072, 1, 917515, 131072, 1, 917516, 131072, 1, 851980, 131072, 1, 786444, 131072, 1, 786445, 131072, 1, 851981, 131072, 1, 917517, 131072, 1, 917518, 131072, 1, 851982, 131072, 1, 786446, 131072, 1, 786447, 131072, 1, 851983, 131072, 1, 917519, 131072, 1, 917520, 131072, 1, 851984, 131072, 1, 786448, 131072, 1, 786449, 131072, 1, 851985, 131072, 1, 917521, 131072, 1, 917522, 262144, 1, 851986, 262144, 0, 786450, 131072, 1, 393234, 131072, 1, 327698, 131072, 0, 262162, 4, 0, 196626, 4, 0, 131090, 4, 0, 65554, 4, 0, 18, 4, 0, 458770, 131072, 1, 983060, 131072, 1, 917524, 131072, 1, 851988, 131072, 1, 786452, 131072, 1, 720916, 131072, 1, 524308, 131072, 1, 458772, 131072, 1, 393236, 131072, 1, -65516, 4, 0, 20, 4, 0, 65556, 4, 0, 131092, 4, 0, 196628, 4, 0, 262164, 4, 0, 327700, 131072, 0, 1114111, 4, 0, 1048576, 4, 0, 1048577, 4, 0, 1048578, 4, 0, 1048579, 4, 0, 1048580, 65536, 1, 1048581, 131072, 1, 1048582, 131072, 1, 1048583, 131072, 1, 1048584, 131072, 1, 1048585, 131072, 1, 1048586, 131072, 1, 1048587, 131072, 1, 1048588, 131072, 1, 1048589, 131072, 1, 1048590, 131072, 1, 1048591, 131072, 1, 1048592, 131072, 1, 1048593, 131072, 1, 1048594, 131072, 1, 1048595, 131072, 1, 1048596, 131072, 1, 1114132, 131072, 2, 1179668, 4, 0, 1179667, 4, 0, 1245203, 131072, 0, 1245202, 131072, 0, 1245201, 131072, 0, 1179665, 4, 0, 1179664, 4, 0, 1179663, 4, 0, 1179662, 4, 0, 1179661, 4, 0, 1179660, 4, 0, 1179659, 4, 0, 1179658, 4, 0, 1179657, 4, 0, 1179656, 4, 0, 1179655, 4, 0, 1179654, 4, 0, 1114117, 131072, 2, 1114116, 65536, 2, 1114115, 4, 0, 1114114, 4, 0, 1114113, 4, 0, 1114112, 4, 0, 1179647, 4, 0, 1179646, 4, 0, 1114118, 131072, 2, 1114119, 131072, 2, 1114120, 131072, 2, 1114121, 131072, 2, 1114122, 131072, 2, 1114123, 131072, 2, 1114124, 131072, 2, 1114125, 131072, 2, 1114126, 131072, 2, 1114127, 131072, 2, 1114128, 131072, 2, 1114129, 131072, 2, 1114130, 131072, 2, 1114131, 131072, 2, 1179666, 4, 0, 1245193, 131072, 0, 1245192, 131072, 0, 1245191, 131072, 0, 1245190, 131072, 0, 1179653, 4, 0, 1179652, 4, 0, 1179651, 4, 0, 1179650, 4, 0, 1179649, 4, 0, 1179648, 4, 0, 1245183, 4, 0, 1245194, 131072, 0, 1245195, 131072, 0, 1245196, 131072, 0, 1245197, 131072, 0, 1245198, 131072, 0, 1245199, 131072, 0, 1245200, 131072, 0, 1245189, 131072, 0, 1245188, 131072, 0, 1245187, 131072, 0, 1245186, 131072, 0, 1245185, 131072, 0, 1245184, 131072, 0, 1310719, 131072, 0, 1245204, 131072, 0, -65515, 4, 0, -65514, 4, 0, -65513, 4, 0, -65512, 4, 0, -65511, 4, 0, -65510, 4, 0, 26, 4, 0, 65562, 4, 0, 131098, 4, 0, 196634, 4, 0, 262170, 4, 0, 327706, 4, 0, 393242, 4, 0, 458778, 4, 0, 524314, 4, 0, 589850, 4, 0, 655386, 4, 0, 720922, 4, 0, 786458, 4, 0, 851994, 4, 0, 917530, 4, 0, 983066, 4, 0, 1048602, 131072, 0, 1114138, 131072, 2, 1179674, 4, 0, 1245210, 131072, 0, 1179673, 4, 0, 1179672, 4, 0, 1179671, 4, 0, 1179670, 4, 0, 1179669, 4, 0, 1245205, 131072, 0, 1245206, 131072, 0, 1245207, 131072, 0, 1245208, 131072, 0, 1245209, 131072, 0, 720919, 4, 0, 655383, 4, 0, 589847, 4, 0, 524311, 4, 0, 458775, 4, 0, 393239, 4, 0, 327703, 4, 0, 262167, 4, 0, 196631, 4, 0, 131095, 4, 0, 65559, 4, 0, 23, 4, 0, 22, 4, 0, 21, 4, 0, 65557, 4, 0, 131093, 4, 0, 196629, 4, 0, 262165, 4, 0, 327701, 196608, 0, 393237, 196608, 1, 458773, 196608, 1, 524309, 196608, 1, 589845, 196608, 1, 589846, 4, 0, 524310, 4, 0, 458774, 4, 0, 393238, 4, 0, 327702, 4, 0, 262166, 4, 0, 196630, 4, 0, 131094, 4, 0, 65558, 4, 0, 655382, 4, 0, 720918, 4, 0, 720917, 196608, 1, 786453, 196608, 1, 851989, 196608, 1, 917525, 196608, 1, 983061, 196608, 1, 1048597, 262144, 1, 1114133, 131072, 2, 1114134, 131072, 2, 1048598, 131072, 0, 983062, 4, 0, 917526, 4, 0, 851990, 4, 0, 786454, 4, 0, 786455, 4, 0, 851991, 4, 0, 917527, 4, 0, 983063, 4, 0, 1048599, 131072, 0, 1114135, 131072, 2, 1114136, 131072, 2, 1048600, 131072, 0, 983064, 4, 0, 917528, 4, 0, 851992, 4, 0, 786456, 4, 0, 720920, 4, 0, 655384, 4, 0, 589848, 4, 0, 524312, 4, 0, 458776, 4, 0, 393240, 4, 0, 327704, 4, 0, 262168, 4, 0, 196632, 4, 0, 131096, 4, 0, 65560, 4, 0, 24, 4, 0, 25, 4, 0, 65561, 4, 0, 131097, 4, 0, 196633, 4, 0, 262169, 4, 0, 327705, 4, 0, 393241, 4, 0, 458777, 4, 0, 524313, 4, 0, 589849, 4, 0, 655385, 4, 0, 720921, 4, 0, 786457, 4, 0, 851993, 4, 0, 917529, 4, 0, 983065, 4, 0, 1048601, 131072, 0, 1114137, 131072, 2)

[node name="Pig" parent="." instance=ExtResource("2_8bon0")]
z_index = 1
position = Vector2(291, 154)
scale = Vector2(2, 2)

[node name="Npc" parent="." instance=ExtResource("3_p0pyx")]
z_index = 1
position = Vector2(187, 91)

[node name="MainCharacter" parent="." instance=ExtResource("4_lwv3j")]
z_index = 1
position = Vector2(64, 41)
scale = Vector2(2, 2)
right_limit = 424
bottom_limit = 314

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(249, 56)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_wqn4n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8x6bn")
}
autoplay = "start"

[node name="Label" type="Label" parent="."]
z_index = 1
offset_left = 101.0
offset_top = 62.0
offset_right = 193.0
offset_bottom = 71.0
theme_override_font_sizes/font_size = 4
text = "Котигорошку! Допоможи бабці
спіймати свиню!"
label_settings = ExtResource("9_ywr7q")
visible_characters = 0
visible_ratio = 0.0

[node name="Label2" type="Label" parent="."]
visible = false
z_index = 1
offset_left = 137.0
offset_top = 54.0
offset_right = 234.0
offset_bottom = 78.0
theme_override_font_sizes/font_size = 4
text = "Дякую Котигорошку!
Я тобі дуже вдячна!"
label_settings = ExtResource("9_ywr7q")
visible_characters = 0
visible_ratio = 0.0

[node name="Stoilo" type="CharacterBody2D" parent="."]
position = Vector2(144, 67)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stoilo"]
position = Vector2(105, -10)
shape = SubResource("RectangleShape2D_7j5ky")

[connection signal="in_stoilo" from="Pig" to="." method="_on_pig_in_stoilo"]
[connection signal="in_stoilo" from="Pig" to="Npc" method="_on_pig_in_stoilo"]
[connection signal="pig_left_screen" from="Pig" to="." method="_on_pig_pig_left_screen"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="Npc" method="_on_animation_player_animation_finished"]
